--- a/style/main.css
+++ b/style/main.css
@@ -70,7 +70,7 @@ float: right!important;
 
 .page-content {
     margin: 0 auto;
-    max-width: 1148px;
+    max-width: 1150px;
     min-height: 575px;
     height: calc(100vh - 63px);
     display: table;
